# tofu3

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  build.rs
src/: dog.rs  main.rs  mongo.rs  utils.rs
src/modules/: analyze.rs  commands.rs  logging.rs  mod.rs  ranks.rs  settings.rs  stats.rs  urban.rs  weather.rs
