[package]
name = "tofubot-rewrite-3"
description = "like-ooh-ahh"
version = "3.0.0-like-ooh-ahh+build.51"
authors = ["noxim#6410"]
build = "build.rs"

[dependencies]
kankyo = "0.2.0"
log = "0.4.0"
pretty_env_logger = "0.2.0"
serde = "1.0.21"
serde_derive = "1.0.21"
bson = "0.10.0"
mongodb = "0.3.7"
typemap = "0.3.3"

[dependencies.serenity]
version = "0.5.0"
features = [ "voice" ]

[build-dependencies]
regex = "0.2.0"