[package]
name = "tofubot"
description = "like-ooh-ahh"
version = "3.1.1-like-ooh-ahh+build.542"
authors = ["noxim#6410"]
build = "build.rs"

[dependencies]
kankyo = "0.2.0"
log = "0.4.0"
pretty_env_logger = { path = "../datadog-env-logger" }
serde = "1.0.21"
serde_derive = "1.0.21"
bson = "0.10.0"
mongodb = "0.3.7"
typemap = "0.3.3"
time = "0.1.39"
toml = "0.4.5"
urbandictionary = "0.3.0"
reqwest = "0.8.4"
dogstatsd = "0.4.0"
lazy_static = "1.0.0"

[dependencies.serenity]
version = "0.5.1"

[build-dependencies]
regex = "0.2.0"